--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Digital Product</title>
 </head>
 <body>
     <a href="index.html"><img class="logo" src="img/tabidli-remove.png" alt="logo"></a>
@@ -19,6 +19,12 @@
         </ul>
         <h2>Digital Products</h2> 
     </header>
+    <div class="search-area">
+    <input class="search" type="search" name="search" id="search" placeholder="search for items">
+    <input class="button" type="button" value="Search">
+    </div>
+
+
 
     <script src="script.js"></script>
 </body>
