fix the spacing

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Digital Product</title>
 </head>
 <body>
+    <div class="container">
     <a href="index.html"><img class="logo" src="img/tabidli-remove.png" alt="logo"></a>
     <img class="bg" src="img/blackpattern.jpg" alt="head">
     <header class="menu">
@@ -19,6 +20,7 @@
         </ul>
         <h2>Digital Products</h2> 
     </header>
+    </div>
     <div class="search-area">
     <input class="search" type="search" name="search" id="search" placeholder="search for items">
     <input class="button" type="button" value="Search">
